--- a/megaSenaSorteio.html
+++ b/megaSenaSorteio.html
@@ -53,7 +53,7 @@
       </div>
     </div>
   </body>
-  <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
+  <script src="./vue.js"></script>
   <script type="module">
 
       Vue.createApp({
